@@ -1,0 +1,11 @@
+debug(15);
+
+sub foo
+{
+   callcc 
+   {
+      invoke($1);
+   };
+}
+
+foo();
