@@ -1,0 +1,3 @@
+Trace: &foo() -goto- &closure[callccfreeze.sl:7]#2 at callccfreeze.sl:11
+Trace: &invoke(&closure[callccfreeze.sl:5-6]#1) at callccfreeze.sl:7
+Trace: [&closure[callccfreeze.sl:7]#2 CALLCC: &closure[callccfreeze.sl:5-6]#1] at callccfreeze.sl:5
